<resources>
    <string name="app_name">jniCalculator</string>
    <string name="clear">AC</string>
    <string name="label_percentage">%</string>
    <string name="label_exponentiation">^</string>
    <string name="label_division">/</string>
    <string name="label_times">*</string>
    <string name="label_minus">-</string>
    <string name="label_add">+</string>
    <string name="label_equals">=</string>
    <string name="label_nine">9</string>
    <string name="label_eight">8</string>
    <string name="label_seven">7</string>
    <string name="label_six">6</string>
    <string name="label_five">5</string>
    <string name="label_four">4</string>
    <string name="label_three">3</string>
    <string name="label_two">2</string>
    <string name="label_one">1</string>
    <string name="label_zero">0</string>
</resources>