<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/bt_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@id/bt_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calculate_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@id/bt_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_clear_all"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/clear"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_7"
        app:layout_constraintEnd_toEndOf="@id/mbt_number_7"
        app:layout_constraintStart_toStartOf="@id/mbt_number_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_percentage"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/label_percentage"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_8"
        app:layout_constraintEnd_toEndOf="@id/mbt_number_8"
        app:layout_constraintStart_toStartOf="@id/mbt_number_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_exponentiation"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/label_exponentiation"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_9"
        app:layout_constraintEnd_toEndOf="@id/mbt_number_9"
        app:layout_constraintStart_toStartOf="@id/mbt_number_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_division"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/label_division"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/bt_times"
        app:layout_constraintEnd_toEndOf="@id/bt_times"
        app:layout_constraintStart_toStartOf="@id/bt_times" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_times"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_times"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/mbt_number_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mbt_number_9"
        app:layout_constraintTop_toTopOf="@id/mbt_number_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_minus"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_minus"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/mbt_number_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mbt_number_6"
        app:layout_constraintTop_toTopOf="@id/mbt_number_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_add"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_add"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/mbt_number_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mbt_number_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_equals"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:text="@string/label_equals"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/bt_add"
        app:layout_constraintStart_toStartOf="@id/mbt_number_3"
        app:layout_constraintTop_toBottomOf="@id/bt_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_9"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_nine"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_4"
        app:layout_constraintEnd_toStartOf="@id/bt_times"
        app:layout_constraintStart_toEndOf="@id/mbt_number_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_8"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_eight"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_4"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_9"
        app:layout_constraintStart_toEndOf="@id/mbt_number_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_7"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_seven"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_4"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_6"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_six"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_1"
        app:layout_constraintEnd_toStartOf="@id/bt_minus"
        app:layout_constraintStart_toEndOf="@id/mbt_number_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_5"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_five"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_1"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_6"
        app:layout_constraintStart_toEndOf="@id/mbt_number_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_4"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_four"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_1"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_3"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_three"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_0"
        app:layout_constraintEnd_toStartOf="@id/bt_add"
        app:layout_constraintStart_toEndOf="@id/mbt_number_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_2"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_two"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_0"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_3"
        app:layout_constraintStart_toEndOf="@id/mbt_number_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_1"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:text="@string/label_one"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/mbt_number_0"
        app:layout_constraintEnd_toStartOf="@id/mbt_number_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbt_number_0"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:text="@string/label_zero"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mbt_number_2"
        app:layout_constraintStart_toStartOf="@id/mbt_number_1" />


</androidx.constraintlayout.widget.ConstraintLayout>